1-fundamentos/examples/2-basic/2-variables/const.js
const names = ['Sergio', 'Rocio', 'Angel', 'Daniel'];

names[0] = 'Antonio';
// name = 4; // error: No se puede cambiar el tipo
// names = 'Ochoa'; // error: No se puede cambiar el tipo
// name = null; // error: No se puede cambiar el tipo

